@@ -1,3 +1,10 @@
+Tue Jul 08 06:44:09 MST 2008  Trevor Fields  <fields_t@ociweb.com>
+
+        * bin/PerlACE/Run_Test.pm:
+
+          Added waitforfileoutput and waitforfileoutput_timed
+          methods that wait for output to appear in a file.
+
 Sun Jul  6 19:47:27 UTC 2008  Ken Sedgwick  <ken+5a4@bonsai.com>
 
 	* rpmbuild/ace-tao.spec:
